# Grape_Variety_Extractor

./: LICENSE  README.md  answer.py
grape-variety-extractor/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
grape-variety-extractor/examples/: sample_output.json
grape-variety-extractor/src/grape_extractor/: __init__.py  llm_client.py  main.py  pdf_parser.py  processor.py  prompts.py
grape-variety-extractor/tests/: test_pdf_parser.py  test_processor.py  test_prompts.py
